PLAT-1219 DbForeignFieldTest: Properly reimplement prefetching-related tests